--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@yudiel/react-qr-scanner": "^1.1.4",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
