--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@yudiel/react-qr-scanner": "^1.1.4",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
