--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -27,7 +28,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
-    "react-qr-reader": "^3.0.0-beta-1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
